<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyHomework</string>

    <string name="textview_title_main">Spiice</string>
    <string name="acc_textview_main">You have an account?</string>
    <string name="button_main">Registration user</string>

    <string name="signup_textview_title">Sign-up</string>
    <string name="signup_textview_firstname">First name</string>
    <string name="signup_textview_lastname">Last name</string>
    <string name="signup_textview_email">Email</string>
    <string name="signup_textview_password">Password</string>
    <string name="signup_button_main">Back to menu</string>
    <string name="acc_textview_signup">You have an account? <b>Log-in</b></string>

    <string name="login_textview_title">Log-in</string>
    <string name="login_textview_email">Email</string>
    <string name="login_textview_password">Password</string>
    <string name="login_button_main">Log-in</string>
    <string name="signUp_button_main">Sign Up</string>
    <string name="acc_textview_login">Return to Sign-up</string>
    <string name="acc_textview_data_storage">Return to Main menu</string>

    <string name="error_empty_text">Text field is empty</string>
    <string name="error_length_text">Length should be min 3 max 255</string>
    <string name="error_symbols_text">Error symbols</string>

    <string name="Save">Save</string>
    <string name="back_main_activity">Back</string>
    <string name="title_notes">Add notes</string>
    <string name="title_notes_db">Add notes in data base</string>
    <string name="add_notes">Add</string>
    <string name="title_et">Title</string>
    <string name="content_et">Content</string>
    <string name="delete_notes_button">Delete</string>
    <string name="share">Share</string>

    <string name="example">Example</string>

    <string name="edittext_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="edittext_default">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-.!@#$%^:{}|*()?1234567890</string>
    <string name="info_block">Info block</string>
    <string name="button_network">Network</string>
    <string name="menu_login">Login</string>
    <string name="Log_in">Log in</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_auto">Auto</string>
    <string name="menu_send">Send</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="first_onboarding">Hello.It my first project</string>
    <string name="second_onboarding" tools:ignore="StringEscaping">Don"t judge it too harshly</string>
    <string name="third_onboarding">Be the first to review</string>
    <string name="next_screen">next</string>
    <string name="go_to_nest_screen">Next</string>

</resources>