<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/ic_menu_login"
            android:checked="true"
            android:checkable="true"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/signUpFragment"
            android:icon="@drawable/ic_menu_sign_up"
            android:title="@string/menu_sign_up" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/listViewAutoFragment"
                android:icon="@drawable/ic_menu_auto"
                android:title="@string/menu_auto" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>