<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <LinearLayout
        android:layout_width="@dimen/linear_layout_width_340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/linear_layout_margin_100dp"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding_30sp">

        <TextView
            android:text="@string/signup_textview_title"
            android:textSize="@dimen/title_signup_main_48sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/signup_textview_firstname"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_name"
            android:hint="@string/signup_textview_firstname"
            android:padding="12dp"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:layout_gravity="center|top"
            android:inputType="textPersonName"
            android:autofillHints="name"
            style="@style/EditTextStyle" />

        <EditText
            android:id="@+id/signup_textview_lastname"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_name"
            android:hint="@string/signup_textview_lastname"
            android:padding="12dp"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:layout_gravity="center|top"
            android:inputType="textPersonName"
            android:autofillHints="name"
            style="@style/EditTextStyle" />

        <EditText
            android:id="@+id/email"
            android:autofillHints="emailAddress"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_default"
            android:hint="@string/signup_textview_email"
            android:padding="12dp"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:layout_gravity="center|top"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle" />

        <EditText
            android:id="@+id/password"
            android:autofillHints="password"
            android:layout_width="@dimen/linear_edittext_width_260dp"
            android:layout_height="wrap_content"
            android:digits="@string/edittext_default"
            android:hint="@string/signup_textview_password"
            android:padding="12dp"
            android:layout_marginTop="@dimen/linear_edittext_margin_25dp"
            android:layout_gravity="center|top"
            android:inputType="textPassword"
            style="@style/EditTextStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/button_signup"
        android:text="@string/signup_button_main"
        android:layout_width="@dimen/button_width_320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/main_active_button_margin_180dp"
        style="@style/MainButtonStyle" />

    <TextView
        android:id="@+id/main_textview_to_login"
        android:text="@string/acc_textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/textview_margin_100dp"
        android:textSize="@dimen/title_signup_main_48sp"
        style="@style/LogInButtonStyle" />

</FrameLayout>