<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/info_block_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_block"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/delete_notes_data"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button"
        android:text="@string/delete_notes_button"
        android:textColor="#673AB7"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/share_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button"
        android:textColor="#673AB7"
        android:textStyle="bold"
        android:text="@string/share"/>

</LinearLayout>