<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:paddingHorizontal="@dimen/margin_20dp"
    android:paddingVertical="@dimen/margin_20dp">

    <TextView
        android:id="@+id/add_notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_notes"
        android:textSize="@dimen/tv_text_size_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:background="@drawable/bg_edittext_400dp"
        android:hint="@string/title_et"
        android:paddingStart="@dimen/margin_20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_notes_tv"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message_notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_edittext_400dp"
        android:hint="@string/message_et"
        android:paddingStart="@dimen/margin_20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_notes_tv"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/add_notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/add_notes"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_notes_tv" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pbAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:layout_constraintStart_toEndOf="@+id/add_notes_button"
        app:layout_constraintTop_toBottomOf="@+id/message_notes_tv" />

    <Button
        android:id="@+id/back_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/back_main_activity"
        app:layout_constraintTop_toBottomOf="@id/notes_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/add_notes_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rv_height_0dp"
        android:layout_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
